--- a/app/views/rademade_admin/_blocks/_form.html.erb
+++ b/app/views/rademade_admin/_blocks/_form.html.erb
@@ -11,7 +11,7 @@ end
 <% content_for :content do %><%
     buttons_template ||= @template_service.form_control_block
     %><%= admin_form(@item, @model_info) do |form| %>
-        <div class="content-box">
+        <div class="content-box ali">
             <div class="form"><%
                 @form_fields_without_locale.each do |form_field|
                     admin_field(form, form_field, @model_info)
