--- a/app/views/rademade_admin/_layouts/login.html.erb
+++ b/app/views/rademade_admin/_layouts/login.html.erb
@@ -2,6 +2,6 @@
 <html>
     <head><%= render @template_service.layout_head %></head>
     <body>
-        <div class="wrapper"><%= yield %></div>
+        <div class="wrapper user_login"><%= yield %></div>
     </body>
 </html>
