--- a/app/views/rademade_admin/_layouts/main.html.erb
+++ b/app/views/rademade_admin/_layouts/main.html.erb
@@ -3,7 +3,7 @@
     <head><%= render @template_service.layout_head %></head>
     <body>
         <div id="wrapper" class="wrapper">
-            <div id="loader" class="loader-wrapper hide">
+            <div id="loader one" class="loader-wrapper hide one">
                 <div class="lds-hourglass"></div>
             </div><%
             concat render @template_service.navigation_block
