--- a/app/assets/stylesheets/blocks/pagination/_link.sass
+++ b/app/assets/stylesheets/blocks/pagination/_link.sass
@@ -5,8 +5,8 @@
   width: 32px
   height: 32px
   line-height: 32px
-  font-size: 1em
-  border-radius: 14px
+  font-size: em(15)
+  border-radius: 4px
   color: $pagination-color
   text-align: center
   border: 1px solid transparent
