--- a/app/views/rademade_admin/dashboard/login.html.erb
+++ b/app/views/rademade_admin/dashboard/login.html.erb
@@ -1,6 +1,6 @@
 <div class="login">
     <div class="login-project">
-        <div class="login-project-box">
+        <div class="login-project-box forked_gem_class">
             <a href="/" target="_blank" class="login-project-title"><%= t('rademade_admin.project') %></a>
         </div>
     </div>
