--- a/app/views/rademade_admin/_blocks/_list.html.erb
+++ b/app/views/rademade_admin/_blocks/_list.html.erb
@@ -14,7 +14,7 @@ end %>
 <% content_for :content do %>
     <div class="btn-list">
         <div class="btn-box align-left fll"><%= yield(:nav_buttons) %></div><%
-        concat render @template_service.search_block
+        concat render @template_service.yn_search_block
     %></div>
     <div class="content-table-holder">
         <table class="content-table<%= @model_info.fixed_thead ? ' fixed-thead' : '' %>" cellspacing="0" cellpadding="0"><%
