--- a/app/views/rademade_admin/_blocks/yn_navigation/menu/_item.html.erb
+++ b/app/views/rademade_admin/_blocks/yn_navigation/menu/_item.html.erb
@@ -4,7 +4,10 @@
   if has_sub_items || uri
   is_active = active?(menu_item) 
 %>
-<li class="list">
+<li class="list <%
+if is_active
+    %> is-active<%
+end%>">
   <a href="<%= uri %>" class="<%
     if is_active
         %> is-active<%
