--- a/app/views/rademade_admin/_blocks/button/_edit.html.erb
+++ b/app/views/rademade_admin/_blocks/button/_edit.html.erb
@@ -2,7 +2,7 @@
 if can? :read, item
     edit_url = admin_edit_uri(item)
     unless edit_url.nil?
-        %><a class="content-action edit" href="<%= edit_url %>" data-content-url="<%= edit_url %>">
+        %><a class="content-action edit" href="<%= edit_url %>">
             <span class="tooltip-holder">
                 <span class="tooltip-text"><%= t('rademade_admin.management.edit') %></span>
             </span>
