--- a/app/views/rademade_admin/_blocks/yn_navigation/menu/_item.html.erb
+++ b/app/views/rademade_admin/_blocks/yn_navigation/menu/_item.html.erb
@@ -20,7 +20,7 @@ end%>">
   </a>
   <%
     if has_sub_items && (is_active || uri.nil?)
-      %><ul class="yn-nav-dd<%
+      %><ul class="yn-nav-dd nav-dd<%
           if uri.nil? && !is_active
               %> hide<%
           end
