--- a/app/views/rademade_admin/_blocks/yn_table/_yn_table_head.html.erb
+++ b/app/views/rademade_admin/_blocks/yn_table/_yn_table_head.html.erb
@@ -1,7 +1,7 @@
 <%
 dummy_object = @model_info.persistence_adapter.new_record
 %><thead>
-    <tr class="yn-content-table-row"><th scope="col"><input class="form-check-input" type="checkbox" value=""></th><%
+    <tr class="yn-content-table-row"><th scope="col"><input class="form-check-input check_all_checkbox" type="checkbox" value=""></th><%
         @list_fields.each_with_index do |field, index|
             next unless can?(:access_field, dummy_object, field.name)
             additional_class_name = [@model.name, field.name].join(' ').parameterize.dasherize
